fix: image orientation overflow on home page (closes #109)
Squashed commit of the following:

commit 1659ca256a4e8f9bde7af8b16f1c83b1a29c0565
Author: Benoît Latinier <benoit@latinier.fr>
Date:   Wed Sep 13 00:28:42 2017 +0200

    fix tests

commit 919c69a7a2325b24bbe05eb5cce4bd7bc7f3ee61
Author: Benoît Latinier <benoit@latinier.fr>
Date:   Wed Sep 13 00:11:08 2017 +0200

    add: cropping images for home + css review

--- a/pigeon/static/css/weights.css
+++ b/pigeon/static/css/weights.css
@@ -13,8 +13,23 @@ a {
   height: 0;
   padding-bottom: 100%;
 }
+.product_img_big.landscape > div {
+  height: 0;
+  overflow: hidden;
+  padding-bottom: 100%;
+  position: relative;
+  width: 100%;
+}
 .product_img_big img {
   width: 100%;
+}
+.product_img_big.landscape img {
+  height: 100%;
+  width: auto;
+  position: absolute;
+  top: 0;
+  left: 50%; /* trick to center img */
+  transform: translate3d(-50%,0,0); /* trick to center img */
 }
 .product_img {
   width: 50px;
